--- a/ng-demos/src/app/app.component.html
+++ b/ng-demos/src/app/app.component.html
@@ -1,8 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
+<script src="mood/tab-list/tab-list.component.ts"></script>
 <header>
 
-  <app-logo></app-logo>
+  <!--  <app-logo></app-logo> -->
 
 </header>
 
@@ -12,13 +13,13 @@
   </h1>
 </div>
 
-<p>Calcul : {{2+2}} - Mustaches makes code interpolation</p>
+<!--<p>Calcul : {{2+2}} - Mustaches makes code interpolation</p>
 
-<h2>Hello ng-demos, it works!</h2>
+<h2>Hello ng-demos, it works!</h2>-->
 
-<app-convertor></app-convertor>
+<app-canvas></app-canvas>
 
 <footer>
 
-  <app-logo></app-logo>
+<!--  <app-logo></app-logo> -->
 </footer>
