Ici on a ajouté un service sur les crypto money

--- a/ng-demos/src/app/app.component.html
+++ b/ng-demos/src/app/app.component.html
@@ -17,8 +17,8 @@
 
 <h2>Hello ng-demos, it works!</h2>-->
 
-<app-canvas></app-canvas>
-
+<!--<app-canvas></app-canvas>-->
+<app-crypto></app-crypto>
 <footer>
 
 <!--  <app-logo></app-logo> -->
